@@ -188,9 +188,9 @@ UserFriendlyTypesVocabularyFactory = UserFriendlyTypesVocabulary()
 BAD_TYPES = ("ATBooleanCriterion", "ATDateCriteria", "ATDateRangeCriterion",
              "ATListCriterion", "ATPortalTypeCriterion", "ATReferenceCriterion",
              "ATSelectionCriterion", "ATSimpleIntCriterion", "Plone Site",
-             "ATSimpleStringCriterion", "ATSortCriterion",
-             "Discussion Item", "TempFolder", "ATCurrentAuthorCriterion",
-             "ATPathCriterion", "ATRelativePathCriterion", )
+             "ATSimpleStringCriterion", "ATSortCriterion", "TempFolder", 
+             "ATCurrentAuthorCriterion", "ATPathCriterion", 
+             "ATRelativePathCriterion", )
 
 
 class ReallyUserFriendlyTypesVocabulary(object):
